--- a/index.html
+++ b/index.html
@@ -3,10 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Pizza Vincent</title>
 </head>
 <body>
-    
+    <header>
+        <div class="navlinks">
+            <a href="#">La carte</a>
+            <a href="index.html" class="logo">Pizza Vincent</a>
+            <a href="#">Contact</a>
+        </div>
+    </header>
+
+    <main>
+        <div class="container">
+            <img src="assets/logo.png" alt="">
+            <p>Vincent vous accueille du mardi au dimanche à partir de 17h, <br>Place Gambetta au centre de Saint-Cannat</p>
+            <p class="banderole">Passer une commande au plus tôt (17-18h), <br>c'est s'assurer d'avoir le choix du créneau horaire</p>
+            <p>PizzaVincent, nous nous agrandissons pour mieux vous servir. <br>
+                Nos pizzas sont fabriquées sur place. Traditionnelles et artisanales, elles sont cuites en direct, c'est essentiel cela assure une pâte croustillante et un fromage fondant à souhait.
+                Vincent, pizzaïlo depuis 20 ans prépare ses classiques : ROYALE, NAPOLITAINE, la pizza FROMAGE. Il réalise aussi les FLAM, flammenkuches, ces pizzas blanches sur base de crème fraîche, dont les plus connues sont les TARTIFLETTE , les pizzas QUEEN.
+                Vous pourrez aussi tenter des pizzas plus particulières que nous avons inventées comme l'AVEYRONNAISE, la GRATINEE ou la pizza TRES VIANDE ou TRES POISSON. Nous suivons aussi de près les nouvelles tendances et bonnes trouvailles ainsi nous avons mis à la carte la pizza d'un ami pizzaöle de Salon de Provence : la PERIGOURDINE. Les saisons précédentes nous vous avons proposé de nouvelles pizzas,dont la Maya, sur crème fraiche avec son chèvre au miel, qui séduit nombre de gourmands. Nous avons aussi ajouté l'INDIENNE et la BROUSSE-CHORIZO. Cette année nous innovons totalement avec La TUTTI, une pizza très originale, sur crème avec des touches de sauce tomate ! C'est une réponse à une pizza inverse la DOUCE qui accueille un peu de crème sur le coulis de tomate. Une autre pizza originale que nous avons créée et testée la TOFU sur sauce tomate, est très étonnante. Il nous semblait important de répondre à des attentes rigoureuses, végétaliennes.<br>
+                Vous pouvez venir commander vos pizzas directement, mais il est toujours préférable de passer commande avant, en début de soirée au 0608527197. Ce dans l'idée de réduire les délais d'attente. Nous sommes très heureux de nous joindre aux activités du centre du village. <br>
+                De la même manière dans le cas d'importantes commandes ou pour les soirs d'affluence, pour les matchs importants, n'hésitez pas à téléphoner tôt et même à réserver vos pizzas la veille. En effet, en étant prévenu à l'avance, pizzavincent peut assurer vos soirées anniversaires, enterrement de vie de garçon, lendemain de mariage, compléter vos buffets, vos repas de comité d'entreprise, nous délivrons des factures et des notes de repas.</p>
+            
+            <div class="divider">
+
+            </div>
+
+            <div class="carte">
+                <h2>La carte des pizzas</h2>
+                <div class="box1">
+                    <h3>Pizzas à la tomate</h3>
+                    <div class="box2">
+                        <div class="line">
+                            <strong>Brousse-Chorizo</strong>
+                            <p class="ingredients">brousse — chorizo — emmental — herbes de provence — olives</p>
+                            <div class="price">
+                                <p>13€</p>
+                                <p>11,50€</p>
+                            </div>
+                        </div>
+                        <div class="line">
+                            <strong>Fromage</strong>
+                            <p class="ingredients">emmental — herbes de provence — olives</p>
+                            <div class="price">
+                                <p>8,50€</p>
+                                <p>6,50€</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
