--- a/public/index.html
+++ b/public/index.html
@@ -375,7 +375,7 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.331855692339!2d5.295301276386439!3d43.62045147110369!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9f42697a5a9e9%3A0x5c7004cec7fe1688!2sPizzaVincent!5e0!3m2!1sen!2sfr!4v1724967957324!5m2!1sen!2sfr" 
                     width="1000" 
                     height="450" 
-                    style="border:0; margin: 30px 0;"
+                    style="border:0; margin: 30px 0; border-radius: 5px;"
                     allowfullscreen="" 
                     loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade">
