--- a/public/index.html
+++ b/public/index.html
@@ -381,11 +381,11 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
 
-                <a href="" class="tel">
+                <a href="tel:+33608527197" class="tel">
                     <ion-icon name="call-outline"></ion-icon>
                     <p>06 08 52 71 97</p>
                 </a>
-                <a href="" class="tel">
+                <a href="tel:+33442506366" class="tel">
                     <ion-icon name="call-outline"></ion-icon>
                     <p>04 42 50 63 66</p>
                 </a>
