--- a/public/index.html
+++ b/public/index.html
@@ -391,6 +391,31 @@
                 </a>
             </div>
         </div>
+        <a href="#" id="back-to-top">
+            <div class="topicon">
+                <ion-icon name="arrow-up-outline"></ion-icon>
+            </div>
+        </a>
+        <script>
+            window.addEventListener("scroll", function() {
+                let button = document.getElementById("back-to-top");
+                if (window.pageYOffset > 100) {
+                    button.style.display = "block";
+                } else {
+                    button.style.display = "none";
+                }
+            });
+
+            // Animation de défilement vers le haut
+            document.getElementById("back-to-top").addEventListener("click", function(event) {
+                event.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth"
+                });
+            });
+
+        </script>        
     </main>
 </body>
 </html>
