--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <div class="navlinks">
-            <a href="#">La carte</a>
+            <a href="#carte">La carte</a>
             <a href="index.html" class="logo">Pizza Vincent</a>
-            <a href="#">Contact</a>
+            <a href="#contact">Contact</a>
         </div>
     </header>
 
@@ -34,7 +34,7 @@
 
             </div>
 
-            <div class="carte">
+            <div class="carte" id="carte">
                 <h2>La carte des pizzas</h2>
                 <div class="box1 red">
                     <h3>Pizzas à la tomate</h3>
@@ -368,7 +368,7 @@
 
             <div class="divider"></div>
 
-            <div class="contact">
+            <div class="contact" id="contact">
                 <h2>Nous trouver</h2>
 
                 <div class="iframe-container">
